[package]
name = "chronicles"
version = "0.0.1"
authors = ["Spa5k"]
edition = "2021"
homepage = "https://github.com/spa5k/chronicles"
keywords = ["archive", "extraction", "extractor"]
license = "MIT"
description = "A simple crate to handle extraction of various types of archives with universal API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
flate2 = "1.0.24"
tar = "0.4.38"
xz2 = "0.1.7"
zip = "0.6.2"
